--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
-    <link rel="stylesheet" href="/Users/maurogomez/repos/odin_recipes/css/styles.css">
+    <link rel="stylesheet" href="/Users/maurogomez/Documents/repos/odin_recipes/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Shadows+Into+Light&display=swap" rel="stylesheet">
@@ -13,27 +13,28 @@
 
 <body>
     <nav>
-    <img id="odinrecipes-logo" src="/Users/maurogomez/repos/odin_recipes/images/odinlogo.png" alt="Odin Recipes Logo">
+        <div id="odinrecipes-logo" ><img src="/Users/maurogomez/Documents/repos/odin_recipes/images/odinlogo.png" alt="Odin Recipes Logo">
+        </div>
     </nav>
-    <h2><i>Click and cook!</i></h2>
+    <h1><i>Click and cook!</i></h1>
     <div class="container">
             <div class="main-item">
-                <a href="/Users/maurogomez/repos/odin_recipes/recipes/lasagna.html" title="Click to see lasagna recipe"><img src="/Users/maurogomez/repos/odin_recipes/images/lasagnaimg.jpeg" alt="Lasagna image">
+                <a href="/Users/maurogomez/Documents/repos/odin_recipes/recipes/lasagna.html" title="Click to see lasagna recipe"><img src="/Users/maurogomez/Documents/repos/odin_recipes/images/lasagnaimg.jpeg" alt="Lasagna image">
                 </a>
             <p>Lasagna recipe</p></div>
 
             <div class="main-item">
-                <a href="/Users/maurogomez/repos/odin_recipes/recipes/pancake.html" title="Click to see pancake recipe"><img src="/Users/maurogomez/repos/odin_recipes/images/pancakeimg.jpeg" alt="Pancake image">
+                <a href="/Users/maurogomez/Documents/repos/odin_recipes/recipes/pancake.html" title="Click to see pancake recipe"><img src="/Users/maurogomez/Documents/repos/odin_recipes/images/pancakeimg.jpeg" alt="Pancake image">
                 </a>
             <p>Pancake recipe</p></div>
 
             <div class="main-item">
-                <a href="/Users/maurogomez/repos/odin_recipes/recipes/lemonpie.html" title="Click to see lemon pie recipe"><img src="/Users/maurogomez/repos/odin_recipes/images/lemonpieimg.jpeg" alt="Lemon pie image">
+                <a href="/Users/maurogomez/Documents/repos/odin_recipes/recipes/lemonpie.html" title="Click to see lemon pie recipe"><img src="/Users/maurogomez/Documents/repos/odin_recipes/images/lemonpieimg.jpeg" alt="Lemon pie image">
                 </a>
             <p>Lemon pie recipe</p></div>
     </div>
     <footer>
-        <p>Designed by <a href="https://github.com/maurog15/odin-recipes" target="_blank" title="Click to github">maurog15</a> for <br><a href="https://www.theodinproject.com/about" target="_blank" title="Click to theodinproject"><img id="odin-logo" src="/Users/maurogomez/repos/odin_recipes/images/theOdinProjectimg.png" alt="TheOdinProject logo"></a></p>
+        <p>Designed by <a href="https://github.com/maurog15/odin_recipes" target="_blank" title="Click to github">maurog15</a> for <br><a href="https://www.theodinproject.com/about" target="_blank" title="Click to theodinproject"><img src="/Users/maurogomez/Documents/repos/odin_recipes/images/theOdinProjectimg.png" alt="TheOdinProject logo"></a></p>
     </footer>
 </body>
 </html>
