--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,12 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna recipe</title>
+    <link rel="stylesheet" href="/Users/maurogomez/Documents/repos/odin_recipes/css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <nav>
+        <div id="odinrecipes-logo">
+            <a href="/Users/maurogomez/Documents/repos/odin_recipes/index.html" title="Click to index"><img src="/Users/maurogomez/Documents/repos/odin_recipes/images/odinlogo.png" alt="Odin Recipes Logo"></a>
+        </div>
+    </nav>
+
+    <h2>How to make world's best Lasagna recipe</h2>
+
+    <div id="content-flex">
+        <div class="left-box">
+            <img id="food-image" src="/Users/maurogomez/Documents/repos/odin_recipes/images/lasagnarecipe.png" alt="Lasagna image">
+        </div>
+        <div class="right-box">
+            <h3>Ingredients</h3>
+            <ul>
+                <li>9 lasagna noodles</li>
+                <li>1-1/4 pounds bulk Italian sausage</li>
+                <li>3/4 pound ground beef</li>
+                <li>1 medium onion, diced</li>
+                <li>3 garlic cloves, minced</li>
+                <li>2 cans (one 28 ounces, one 15 ounces) crushed tomatoes</li>
+                <li>2 cans (6 ounces each) tomato paste</li>
+                <li>2/3 cup water</li>
+                <li>2 to 3 tablespoons sugar</li>
+                <li>3 tablespoons plus 1/4 cup minced fresh parsley, divided</li>
+                <li>2 teaspoons dried basil</li>
+                <li>3/4 teaspoon fennel seed</li>
+                <li>3/4 teaspoon salt, divided</li>
+                <li>1/4 teaspoon coarsely ground pepper</li>
+                <li>1 large egg, lightly beaten</li>
+                <li>1 carton (15 ounces) ricotta cheese</li>
+                <li>4 cups shredded part-skim mozzarella cheese</li>
+                <li>3/4 cup grated Parmesan cheese</li>
+            </ul>
+        </div>
+    </div>
+    <div class="bottom-box">
+        <h3>Directions</h3>
+        <ol>
+            <li>Cook noodles according to package directions; drain. Meanwhile, in a Dutch oven, cook sausage, beef and onion over medium heat 8-10 minutes or until meat is no longer pink, breaking up meat into crumbles. Add garlic; cook 1 minute. Drain.</li>
+            <br>
+            <li>Stir in tomatoes, tomato paste, water, sugar, 3 tablespoons parsley, basil, fennel, 1/2 teaspoon salt and pepper; bring to a boil. Reduce heat; simmer, uncovered, 30 minutes, stirring occasionally.</li>
+            <br>
+            <li>In a small bowl, mix egg, ricotta cheese and remaining 1/4 cup parsley and 1/4 teaspoon salt.</li>
+            <br>
+            <li>Preheat oven to 375°. Spread 2 cups meat sauce into an ungreased 13x9-in. baking dish. Layer with 3 noodles and a third of the ricotta mixture. Sprinkle with 1 cup mozzarella cheese and 2 tablespoons Parmesan cheese. Repeat layers twice. Top with remaining meat sauce and cheeses (dish will be full).</li>
+            <br>
+            <li>Bake, covered, 25 minutes. Bake, uncovered, 25 minutes longer or until bubbly. Let stand 15 minutes before serving.</li>
+        </ol>
+    </div>
+
+    <footer>
+        <p>Designed by <a href="https://github.com/maurog15/odin_recipes" target="_blank" title="Click to github">maurog15</a> for <br><a href="https://www.theodinproject.com/about" target="_blank" title="Click to theodinproject"><img src="/Users/maurogomez/Documents/repos/odin_recipes/images/theOdinProjectimg.png" alt="TheOdinProject logo"></a></p>
+    </footer>
 </body>
 </html>
