Finished recipes HTML and update photos.
Finished lemonpie.html; pancake.html.

--- a/recipes/lemonpie.html
+++ b/recipes/lemonpie.html
@@ -17,48 +17,43 @@
         </div>
     </nav>
 
-    <h2>How to make world's best Lasagna recipe</h2>
+    <h2>How to make world's best Lemon Pie recipe</h2>
 
     <div id="content-flex">
         <div class="left-box">
-            <img id="food-image" src="/Users/maurogomez/Documents/repos/odin_recipes/images/lasagnarecipe.png" alt="Lasagna image">
+            <img id="food-image" src="/Users/maurogomez/Documents/repos/odin_recipes/images/lemonpierecipe.jpeg" alt="Lemonpie image">
         </div>
         <div class="right-box">
             <h3>Ingredients</h3>
             <ul>
-                <li>9 lasagna noodles</li>
-                <li>1-1/4 pounds bulk Italian sausage</li>
-                <li>3/4 pound ground beef</li>
-                <li>1 medium onion, diced</li>
-                <li>3 garlic cloves, minced</li>
-                <li>2 cans (one 28 ounces, one 15 ounces) crushed tomatoes</li>
-                <li>2 cans (6 ounces each) tomato paste</li>
-                <li>2/3 cup water</li>
-                <li>2 to 3 tablespoons sugar</li>
-                <li>3 tablespoons plus 1/4 cup minced fresh parsley, divided</li>
-                <li>2 teaspoons dried basil</li>
-                <li>3/4 teaspoon fennel seed</li>
-                <li>3/4 teaspoon salt, divided</li>
-                <li>1/4 teaspoon coarsely ground pepper</li>
-                <li>1 large egg, lightly beaten</li>
-                <li>1 carton (15 ounces) ricotta cheese</li>
-                <li>4 cups shredded part-skim mozzarella cheese</li>
-                <li>3/4 cup grated Parmesan cheese</li>
+                <li>180g almond powder</li>
+                <li>300g castor sugar</li>
+                <li>140g unsalted butter, cold</li>
+                <li>140g flour</li>
+                <li>320g crumble</li>
+                <li>80g white chocolate couverture</li>
+                <li>80g unsalted butter</li>
+                <li>200g lemon juice</li>
+                <li>1 lemon zest</li>
+                <li>240g whole eggs</li>
+                <li>5 gelatin sheets (or 10g)</li>
             </ul>
         </div>
     </div>
     <div class="bottom-box">
         <h3>Directions</h3>
         <ol>
-            <li>Cook noodles according to package directions; drain. Meanwhile, in a Dutch oven, cook sausage, beef and onion over medium heat 8-10 minutes or until meat is no longer pink, breaking up meat into crumbles. Add garlic; cook 1 minute. Drain.</li>
+            <li>For the crumble, tip all the ingredients in the stand mixer bowl and start mixing at medium speed with the flat beater. After a few minutes, the consistency should be crumbly with coarse chunks, shape the crumble into a ball and then slide on a spaetzle grater to obtain tiny bits of dough of regular size over a baking sheet lined with greaseproof paper. Bake in a fan-assisted oven at 160°C (gas 3) for about 20 minutes. </li>
             <br>
-            <li>Stir in tomatoes, tomato paste, water, sugar, 3 tablespoons parsley, basil, fennel, 1/2 teaspoon salt and pepper; bring to a boil. Reduce heat; simmer, uncovered, 30 minutes, stirring occasionally.</li>
+            <li>In a separate bowl, melt 80 grams of white chocolate couverture and 80 grams of butter. Place the crumble in the stand mixer recipient. Add the melted butter and chocolate, to combine with the flat beater for about 15 or 20 seconds, juts long enough to blend the ingredients.</li>
             <br>
-            <li>In a small bowl, mix egg, ricotta cheese and remaining 1/4 cup parsley and 1/4 teaspoon salt.</li>
+            <li>Transfer the cooked crumble into a stainless steel tart ring (diameter 18cm) and using a small palette knife, pack the biscuit preparation down to create a regular layer. Reserve in the fridge while you make the lemon filling.</li>
             <br>
-            <li>Preheat oven to 375°. Spread 2 cups meat sauce into an ungreased 13x9-in. baking dish. Layer with 3 noodles and a third of the ricotta mixture. Sprinkle with 1 cup mozzarella cheese and 2 tablespoons Parmesan cheese. Repeat layers twice. Top with remaining meat sauce and cheeses (dish will be full).</li>
+            <li>For the lemon filling, pour the lemon juice or lemon purée in a saucepan and heat the saucepan. Grate the zest of one lemon over the saucepan, and whisk the whole eggs and transfer into a large bowl. Add the castor sugar.</li>
             <br>
-            <li>Bake, covered, 25 minutes. Bake, uncovered, 25 minutes longer or until bubbly. Let stand 15 minutes before serving.</li>
+            <li>When the lemon juice starts boiling, pour it over the blanched eggs in two batches, while stirring with a whisk. Transfer the preparation into the saucepan used to heat the juice and combine whith a whisk. The preparation should quickly thicken. Remove from the heat as soon as you get a gentle boil and add the white chocolate. Add the strained gelatin and whisk until dissolved.</li>
+            <br>
+            <li>Finally, assembling the pie: Take the biscuit base out of the fridge, which should have hardened a little. Pour the lemon filling over the biscuit, up to the rim and gently shake the ring to even the surface of the lemon cream. Set aside in the fridge during at least 4 hours.</li>
         </ol>
     </div>
 
