--- a/recipes/pancake.html
+++ b/recipes/pancake.html
@@ -17,48 +17,36 @@
         </div>
     </nav>
 
-    <h2>How to make world's best Lasagna recipe</h2>
+    <h2>How to make world's best Pancake recipe</h2>
 
     <div id="content-flex">
         <div class="left-box">
-            <img id="food-image" src="/Users/maurogomez/Documents/repos/odin_recipes/images/lasagnarecipe.png" alt="Lasagna image">
+            <img id="food-image" src="/Users/maurogomez/Documents/repos/odin_recipes/images/pancakerecipe.jpeg" alt="Pancake image">
         </div>
         <div class="right-box">
             <h3>Ingredients</h3>
             <ul>
-                <li>9 lasagna noodles</li>
-                <li>1-1/4 pounds bulk Italian sausage</li>
-                <li>3/4 pound ground beef</li>
-                <li>1 medium onion, diced</li>
-                <li>3 garlic cloves, minced</li>
-                <li>2 cans (one 28 ounces, one 15 ounces) crushed tomatoes</li>
-                <li>2 cans (6 ounces each) tomato paste</li>
+                <li>1 cup all-purpose flour</li>
+                <li>1 tablespoon sugar</li>
+                <li>2 teaspoons baking powder</li>
+                <li>1/2 teaspoon salt</li>
+                <li>1 large egg</li>
+                <li>3/4 cup milk</li>
+                <li>1/4 cup shortening or butter, melted</li>
                 <li>2/3 cup water</li>
-                <li>2 to 3 tablespoons sugar</li>
-                <li>3 tablespoons plus 1/4 cup minced fresh parsley, divided</li>
-                <li>2 teaspoons dried basil</li>
-                <li>3/4 teaspoon fennel seed</li>
-                <li>3/4 teaspoon salt, divided</li>
-                <li>1/4 teaspoon coarsely ground pepper</li>
-                <li>1 large egg, lightly beaten</li>
-                <li>1 carton (15 ounces) ricotta cheese</li>
-                <li>4 cups shredded part-skim mozzarella cheese</li>
-                <li>3/4 cup grated Parmesan cheese</li>
             </ul>
         </div>
     </div>
     <div class="bottom-box">
         <h3>Directions</h3>
         <ol>
-            <li>Cook noodles according to package directions; drain. Meanwhile, in a Dutch oven, cook sausage, beef and onion over medium heat 8-10 minutes or until meat is no longer pink, breaking up meat into crumbles. Add garlic; cook 1 minute. Drain.</li>
+            <li>In a small bowl, combine flour, sugar, baking powder and salt. Combine egg, milk and shortening; stir into dry ingredients just until moistened.</li>
             <br>
-            <li>Stir in tomatoes, tomato paste, water, sugar, 3 tablespoons parsley, basil, fennel, 1/2 teaspoon salt and pepper; bring to a boil. Reduce heat; simmer, uncovered, 30 minutes, stirring occasionally.</li>
+            <li>Pour batter by 1/4 cupfuls onto a greased hot griddle. Turn when bubbles form on top of pancakes; cook until the second side is golden brown.</li>
             <br>
-            <li>In a small bowl, mix egg, ricotta cheese and remaining 1/4 cup parsley and 1/4 teaspoon salt.</li>
+            <li>TIP! Use a gentle hand when folding the wet ingredients into the dry ingredients and mix just until incorporated to make the fluffiest pancakes ever.</li>
             <br>
-            <li>Preheat oven to 375°. Spread 2 cups meat sauce into an ungreased 13x9-in. baking dish. Layer with 3 noodles and a third of the ricotta mixture. Sprinkle with 1 cup mozzarella cheese and 2 tablespoons Parmesan cheese. Repeat layers twice. Top with remaining meat sauce and cheeses (dish will be full).</li>
-            <br>
-            <li>Bake, covered, 25 minutes. Bake, uncovered, 25 minutes longer or until bubbly. Let stand 15 minutes before serving.</li>
+            <li>TIP! To avoid a bad first pancake, it is best to first season your skillet or griddle by heating it over medium heat. Then, carefully grease the cooking surface with oil or butter, wiping off any excess with a paper towel. </li>
         </ol>
     </div>
 
