Fixed all paths

--- a/recipes/lemonpie.html
+++ b/recipes/lemonpie.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna recipe</title>
-    <link rel="stylesheet" href="/Users/maurogomez/Documents/repos/odin_recipes/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Shadows+Into+Light&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <div id="odinrecipes-logo">
-            <a href="/Users/maurogomez/Documents/repos/odin_recipes/index.html" title="Click to index"><img src="/Users/maurogomez/Documents/repos/odin_recipes/images/odinlogo.png" alt="Odin Recipes Logo"></a>
+            <a href="index.html" title="Click to index"><img src="images/odinlogo.png" alt="Odin Recipes Logo"></a>
         </div>
     </nav>
 
@@ -21,7 +21,7 @@
 
     <div id="content-flex">
         <div class="left-box">
-            <img id="food-image" src="/Users/maurogomez/Documents/repos/odin_recipes/images/lemonpierecipe.jpeg" alt="Lemonpie image">
+            <img id="food-image" src="images/lemonpierecipe.jpeg" alt="Lemonpie image">
         </div>
         <div class="right-box">
             <h3>Ingredients</h3>
@@ -58,7 +58,7 @@
     </div>
 
     <footer>
-        <p>Designed by <a href="https://github.com/maurog15/odin_recipes" target="_blank" title="Click to github">maurog15</a> for <br><a href="https://www.theodinproject.com/about" target="_blank" title="Click to theodinproject"><img src="/Users/maurogomez/Documents/repos/odin_recipes/images/theOdinProjectimg.png" alt="TheOdinProject logo"></a></p>
+        <p>Designed by <a href="https://github.com/maurog15/odin_recipes" target="_blank" title="Click to github">maurog15</a> for <br><a href="https://www.theodinproject.com/about" target="_blank" title="Click to theodinproject"><img src="images/theOdinProjectimg.png" alt="TheOdinProject logo"></a></p>
     </footer>
 </body>
 </html>
